--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
             width: 100%;
             height: 300px;
         }
+
+        @media(max-width: 500px) {
+            .img {
+                height: 250px;
+            }
+
+            .img img {
+                width: 100%;
+                height: 200px;
+            }
+
+            .card-image .card-title {
+                font-size: 3rem;
+                font-weight: 500;
+                padding-top: 1rem;
+                color: black;
+            }
+        }
     </style>
 </head>
 
